# CppANN

./: CMakeLists.txt  README.md  basic_class.cpp  basic_class.h  data.cpp  data.h  functions.cpp  functions.h  initialization.cpp  initialization.h  loss.txt  loss_full.txt  main.cpp  models.cpp  models.h  optimizers.cpp  optimizers.h
